# microforest

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: baseline_comparison.csv  baseline_comparison.md
assets/: README.md
microforest/: __init__.py  data.py  metrics.py  models.py  simulation.py
scripts/: compare_baselines.py  generate_dataset.py  smoke_test.py  train_microforest.py
tests/: test_pipeline.py
