[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microforest"
version = "0.1.0"
description = "Reference implementation of MicroForest for bottleneck prediction in manufacturing processes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "lightgbm>=4.0",
]

[tool.setuptools.packages.find]
include = ["microforest*"]
